--- a/styles.css
+++ b/styles.css
@@ -47,8 +47,8 @@ article{
 	border-radius: 10px;
 	background: rgb(245,245,245);
 	padding: 1px 10px;
-	border-color: #000000;
-	border: thin;
+	border-color: rgb(0,0,0);
+	border: medium;
 }
 input[type="submit"]{
 	margin: 8px; 
@@ -63,4 +63,25 @@ input[type="submit"]{
     border-radius: 1px;
     -moz-border-radius: 1px;
     -webkit-border-radius: 1px;
+}
+li{
+	line-height: 20px;
+}
+input[type="button"]{
+	margin: 8px; 
+	font-size: 18px;
+	font-weight: bold;
+	background: #2a2a2a;
+    width: 150px;
+    padding: 9px;
+    letter-spacing: 1px;
+    border: none;
+    color: rgb(255,255,255);
+    border-radius: 1px;
+    -moz-border-radius: 1px;
+    -webkit-border-radius: 1px;
+}
+img{
+	margin: auto;
+	padding: 3px;
 }
